# vapoursynth-waifu2x-ncnn-vulkan

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
src/: CMakeLists.txt  vsw2xnvk.cpp  waifu2x.cpp  waifu2x.hpp  waifu2x_postproc.comp  waifu2x_postproc_fp16.comp  waifu2x_postproc_fp32.comp  waifu2x_postproc_tta_fp16.comp  waifu2x_postproc_tta_fp32.comp  waifu2x_preproc.comp  waifu2x_preproc_fp16.comp  waifu2x_preproc_fp32.comp  waifu2x_preproc_tta_fp16.comp  waifu2x_preproc_tta_fp32.comp
